--- a/FUNDAMENTOS/3.5/Projeto/index.html
+++ b/FUNDAMENTOS/3.5/Projeto/index.html
@@ -111,7 +111,7 @@
         <p><img src="usa_army.png" class="imagem-session">A estrutura da lagosta-boxeadora é tão robusta que os cientistas estão estudando sua estrutura 
           celular para desenvolver armaduras para as tropas de combate. Os Estados Unidos também 
         estão correndo contra o tempo para finalizar sua pesquisa para a criação de aeronaves 
-        militares mais resistentes a partir do mesmo revestimento das patas boxeadoras.almente.</p></session>
+        militares mais resistentes a partir do mesmo revestimento das patas boxeadoras.</p></session>
       <session></session>
       <session><h3>Referências de estudo</h3>
       <ul id="referencias">
